tests/invalid_pascal_programs/invalid_token.pas
progxram InvalidExample;
begin
  writeln ('Hello world!');
end.
